lnmp/conf/iptables
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#ipset
-A PREROUTING -m set --match-set blacklist src -j DROP
COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -p tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A INPUT -p tcp --tcp-flags ACK,FIN FIN -j DROP
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

-A INPUT -p tcp -m tcp -m multiport --dports 22,80,443,9167 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m set --match-set lvs src -m tcp -m multiport --dports 26379,9067,2267,6379 -j ACCEPT
-A INPUT -p tcp -m set --match-set db src -m tcp -m multiport --dports 3367,6379 -j ACCEPT
-A INPUT -p tcp -m set --match-set admin src -m tcp -m multiport --dports 26379,9067,2267 -j ACCEPT
-A INPUT -p tcp -m set --match-set stat src -m tcp -m multiport --dports 8600:8800,3306,3367,6379 -j ACCEPT
-A INPUT -p tcp -m set --match-set company src -m tcp -m multiport --dports 3306,3367 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
